# ld_maker

./: .gitignore  LICENSE  README.md  __init__.py  __main__.py  bilayer.py  builder.py  index.py  pipeline.sh  pyproject.toml  relax.py  templates.py  topology.py  vmd.py
.github/workflows/: ci.yml
docs/: index.html
equil/: README.md  run_equil.sh  run_equil.slurm  run_ld.sh  step6.1_demo.mdp  validate.py
templates/: core_templates.gro
tests/: conftest.py  test_bilayer.py  test_builder.py  test_cases.py  test_index.py  test_relax.py  test_templates.py  test_topology.py  test_vmd.py
